<resources>
    <string name="app_name">Gallery</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_home">Home</string>
    <string name="title_order">Orders</string>
    <string name="title_account">My Account</string>
    <string name="title_notification">Notifications</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="how_it_works">How it Works</string>
    <string name="contact_us">Contact Us</string>
    <string name="about_us">about us</string>
    <string name="new_order">New Order</string>
</resources>