<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".HomeFragment"
    tools:ignore="ContentDescription">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.50" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_banner"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:layout_marginTop="4dp"
            android:elevation="1dp"
            android:scaleType="fitXY"
            android:src="@drawable/group_4920"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.051"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="4dp"
            android:elevation="1dp"
            android:scaleType="fitXY"
            android:src="@drawable/group_5249"
            app:layout_constraintBottom_toBottomOf="@+id/guideline_logo_h"
            app:layout_constraintEnd_toEndOf="@id/guideline_logo_v"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_banner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@drawable/group_14720"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay_card_custom_corners" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_logo_v"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.4" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_logo_h"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.25" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/home_bottom_nav"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline_card">

        <LinearLayout
            android:id="@+id/ll_cards"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="75dp"
            android:elevation="2dp"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cv_item1"
                style="@style/CardViewStyle"
                android:layout_width="match_parent"
                android:layout_height="80dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/light_blue">

                    <ImageView
                        android:id="@+id/iv_icon"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_margin="24dp"
                        android:src="@drawable/noun_order_3831794"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="18dp"
                        android:text="@string/title_order"
                        android:textAllCaps="true"
                        android:textColor="@color/dark_blue"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="@+id/iv_icon"
                        app:layout_constraintStart_toEndOf="@+id/iv_icon"
                        app:layout_constraintTop_toTopOf="@+id/iv_icon" />

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/iv_icon_end"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_margin="24dp"
                        android:background="@color/dark_blue"
                        android:elevation="0dp"
                        android:scaleType="centerInside"
                        android:src="@drawable/ic_baseline_arrow_forward_ios_24"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent"
                        app:tint="@color/light_blue" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cv_item2"
                style="@style/CardViewStyle"
                android:layout_width="match_parent"
                android:layout_height="80dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/dark_blue">

                    <ImageView
                        android:id="@+id/iv_icon2"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_margin="24dp"
                        android:contentDescription="@string/how_it_works"
                        android:src="@drawable/noun_workflow_2500651"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="18dp"
                        android:text="@string/how_it_works"
                        android:textAllCaps="true"
                        android:textColor="@color/light_blue"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="@+id/iv_icon2"
                        app:layout_constraintStart_toEndOf="@+id/iv_icon2"
                        app:layout_constraintTop_toTopOf="@+id/iv_icon2" />

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/iv_icon_end2"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_margin="24dp"
                        android:background="@color/light_blue"
                        android:elevation="0dp"
                        android:scaleType="centerInside"
                        android:src="@drawable/ic_baseline_arrow_forward_ios_24"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent"
                        app:tint="@color/dark_blue" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cv_item3"
                style="@style/CardViewStyle"
                android:layout_width="match_parent"
                android:layout_height="80dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/light_blue">

                    <ImageView
                        android:id="@+id/iv_icon3"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_margin="24dp"
                        android:src="@drawable/noun_chat_icon_3363125"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="18dp"
                        android:text="@string/about_us"
                        android:textAllCaps="true"
                        android:textColor="@color/dark_blue"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="@+id/iv_icon3"
                        app:layout_constraintStart_toEndOf="@+id/iv_icon3"
                        app:layout_constraintTop_toTopOf="@+id/iv_icon3" />

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/iv_icon_end3"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_margin="24dp"
                        android:background="@color/dark_blue"
                        android:elevation="0dp"
                        android:scaleType="centerInside"
                        android:src="@drawable/ic_baseline_arrow_forward_ios_24"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent"
                        app:tint="@color/light_blue" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cv_item4"
                style="@style/CardViewStyle"
                android:layout_width="match_parent"
                android:layout_height="80dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/dark_blue">

                    <ImageView
                        android:id="@+id/iv_icon4"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_margin="24dp"
                        android:src="@drawable/noun_contact_3842558"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="18dp"
                        android:text="@string/contact_us"
                        android:textAllCaps="true"
                        android:textColor="@color/light_blue"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="@+id/iv_icon4"
                        app:layout_constraintStart_toEndOf="@+id/iv_icon4"
                        app:layout_constraintTop_toTopOf="@+id/iv_icon4" />

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/iv_icon_end4"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_margin="24dp"
                        android:background="@color/light_blue"
                        android:elevation="0dp"
                        android:scaleType="centerInside"
                        android:src="@drawable/ic_baseline_arrow_forward_ios_24"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent"
                        app:tint="@color/dark_blue" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/home_bottom_nav"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="@drawable/bnv_bg"
        android:elevation="4dp"
        app:itemTextAppearanceActive="@color/dark_blue"
        app:itemTextAppearanceInactive="@color/black"
        app:itemTextColor="@drawable/bottom_icon_selector"
        app:labelVisibilityMode="labeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/bottom_nav_menu" />

    <FrameLayout
        android:id="@+id/fl_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:elevation="10dp"
        app:layout_constraintBottom_toBottomOf="@id/home_bottom_nav"
        app:layout_constraintEnd_toEndOf="@id/home_bottom_nav"
        app:layout_constraintStart_toStartOf="@id/home_bottom_nav"
        app:layout_constraintTop_toTopOf="@+id/home_bottom_nav">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="36dp"
            android:backgroundTint="@color/light_blue"
            android:contentDescription="@string/app_name"
            android:src="@drawable/noun_add_receipt_783557"
            app:elevation="6dp"
            app:fabCustomSize="80dp"
            app:tint="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:elevation="8dp"
            android:padding="8dp"
            android:text="@string/new_order"
            android:textColor="@color/white"
            android:textSize="12sp" />
    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>